feat: add "Show comments" checkbox
Closes #172

--- a/src/options.html
+++ b/src/options.html
@@ -88,6 +88,12 @@
         <br>
 
         <label>
+            <input type="checkbox" name="showCommentsCheckbox"> Insert "Show comments" checkbox in diff header.
+        </label>
+        <br>
+        <br>
+
+        <label>
             <input type="checkbox" name="prTemplateEnabled"> Use a
             <em>PULL_REQUEST_TEMPLATE.md</em> from the repository when creating new pull requests or specify a URL with your
             own raw template (must be hosted publicly in
